--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.h-center {
+    margin: auto;
+    padding: 50px;
+    text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#gen-button {
+    padding: 15px 10%;
+    font-size: 1.25em;
+    background-color: #69cdff;
+    color: #303030;
+    border-color: rgba(111, 111, 111, 0);
+    border: 0.5px solid #a1a1a1;
+    border-radius: 20px;
 }
